--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,7 +5,7 @@ body {
     background-color: #ffffff;
 }
 
-h1, h2, .logo-text {
+h1, h2, .logo-text, .error-message {
     font-weight: normal;
     text-align: center;
 }
