Realized displaying polls data for users

--- a/src/assets/carts.css
+++ b/src/assets/carts.css
@@ -1,4 +1,4 @@
-.users-carts, .user-block {
+.users-carts, .user-block, .polls-carts {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,11 +13,19 @@
     margin-right: 40px;
 }
 
-.user-block {
+.user-block, .poll-cart {
     box-shadow: 0 0 10px rgba(15, 10, 5, 0.1);
     border-radius: 2px;
     padding: 30px;
     width: 550px;
     margin: auto;
     margin-top: 15px;
+}
+
+.poll-cart {
+    margin-bottom: 30px;
+}
+
+.poll-link, .poll-theme {
+    text-decoration: underline;
 }
