Page for creating polls

--- a/src/assets/polls.css
+++ b/src/assets/polls.css
@@ -54,3 +54,9 @@
     border: 0px;
     cursor: pointer;
 }
+
+.create-poll-form-block, .create-poll-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
