--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,8 +1,16 @@
+html, body {
+    height: 100%;
+}
+
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #ffffff;
+}
+
+button {
+    cursor: pointer;
 }
 
 h1, h2, .logo-text, .error-message {
@@ -15,17 +23,46 @@ a {
     color: black;
 }
 
+.wrapper {
+    position: relative;
+    min-height: 100vh;
+}
+
 .header-container {
     width: 95%;
     margin: auto;
     display: flex;
     align-items: center;
+    height: 100px;
     justify-content: space-between;
 }
 
 header {
     background-color: #1a1a1a;
     padding: 35px 0;
+}
+
+.footer-container {
+    width: 45%;
+    font-size: 20px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    height: 100%;
+    justify-content: space-between;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #1a1a1a;
+    height: 160px;
+}
+
+.footer-link {
+    color: white;
 }
 
 .logo-text {
@@ -48,6 +85,7 @@ ul {
 
 .main-content {
     padding: 50px 0;
+    padding-bottom: 190px;
 }
 
 .main-content h2 {
@@ -119,4 +157,3 @@ ul {
     text-decoration: underline;
     color: black;
 }
-
