--- a/src/assets/polls.css
+++ b/src/assets/polls.css
@@ -6,8 +6,8 @@
 
 .modal {
     display: none;
-    position: absolute;
-    top: 50%;
+    position: fixed;
+    top: 45vh;
     left: 50%;
     margin-top: 60px;
     transform: translate(-50%, -50%);
@@ -58,5 +58,35 @@
 .create-poll-form-block, .create-poll-form {
     display: flex;
     flex-direction: column;
+    width: 515px;
+    margin: auto;
+}
+
+.create-polls-btn {
+    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.create-poll-main-btns {
+    display: flex;
+    flex-direction: column;
     align-items: center;
+}
+
+.create-poll-main-btns button {
+    margin: 10px;
+}
+
+.poll-theme-create, .question-text-create {
+    text-decoration: none;
+    border-left: 1px solid black;
+}
+
+.delete-btn {
+    padding: 7px;
+    width: 40px;
+    margin: 10px;
+    text-align: center;
+    vertical-align: middle;
 }
